<resources>
    <string name="app_name">Coffre-Fort</string>
    <string name="login_title">Coffre-Fort</string>
    <string name="password_hint">Mot de passe</string>
    <string name="login_button">Se connecter</string>
    <string name="create_password_button">Créer un mot de passe</string>
    <string name="invalid_password">Mot de passe incorrect</string>
    <string name="password_created">Mot de passe créé avec succès</string>
    <string name="empty_password">Le mot de passe ne peut pas être vide</string>
    <string name="my_documents">Mes Documents</string>
    <string name="add_document">Ajouter un document</string>
    <string name="all_categories">Toutes les catégories</string>
    <string name="category_text">Texte</string>
    <string name="category_images">Images</string>
    <string name="category_media">Média</string>
    <string name="category_other">Autre</string>
    <string name="category_sms">SMS</string>
    <string name="category_messages">Messages SMS/MMS</string>
    <string name="document_title">Titre du document</string>
    <string name="document_content">Contenu</string>
    <string name="document_description">Description</string>
    <string name="document_category">Catégorie</string>
    <string name="save_button">Enregistrer</string>
    <string name="cancel_button">Annuler</string>
    <string name="delete_button">Supprimer</string>
    <string name="document_detail">Détails du document</string>
    <string name="no_documents">Aucun document</string>
    <string name="document_saved">Document enregistré</string>
    <string name="document_deleted">Document supprimé</string>
    <string name="confirm_delete">Êtes-vous sûr de vouloir supprimer ce document?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="title_required">Le titre est requis</string>
    <string name="content_required">Le contenu est requis</string>
    <string name="document_content_hint">Saisissez le contenu du document</string>
    <string name="document_description_hint">Saisissez une note facultative</string>
    <string name="attachment_section_title">Pièce jointe</string>
    <string name="no_attachment_selected">Aucune pièce jointe sélectionnée</string>
    <string name="choose_attachment">Choisir un fichier</string>
    <string name="remove_attachment">Retirer</string>
    <string name="attachment_optional">Pièce jointe facultative</string>
    <string name="attachment_required_hint">Sélectionnez un fichier pour cette catégorie</string>
    <string name="attachment_selected">Pièce jointe : %1$s</string>
    <string name="attachment_required_toast">Cette catégorie nécessite une pièce jointe</string>
    <string name="unknown_file">Fichier inconnu</string>
    <string name="unknown_mime_type">type inconnu</string>
    <string name="document_list_timestamp">Mis à jour le %1$s</string>
    <string name="attachment_summary_short">Pièce jointe : %1$s</string>
    <string name="attachment_extension_format">Extension : %1$s</string>
    <string name="attachment_size_format">Taille : %1$s</string>
    <string name="attachment_size_unknown">Taille : inconnue</string>
    <string name="change_category_button">Changer de catégorie</string>
    <string name="change_category_dialog_title">Sélectionnez une nouvelle catégorie</string>
    <string name="change_category_success">Catégorie mise à jour.</string>
    <string name="change_category_error">Impossible de mettre à jour la catégorie.</string>
    <string name="email_document_button">Envoyer par e-mail</string>
    <string name="email_document_subject">Document : %1$s</string>
    <string name="email_document_body">Titre : %1$s
Catégorie : %2$s
Date : %3$s

%4$s</string>
    <string name="email_document_body_placeholder">Aucune description fournie. Consultez la pièce jointe si présente.</string>
    <string name="document_email_missing_config">Configurez l’e-mail dans les paramètres avant d’envoyer.</string>
    <string name="document_email_started">Envoi de l’e-mail en cours…</string>
    <string name="no_preview_available">Aucun aperçu disponible</string>
    <string name="document_detail_timestamp">Ajouté le %1$s</string>
    <string name="attachment_name_format">%1$s (%2$s)</string>
    <string name="attachment_image_content_description">Aperçu de la pièce jointe</string>
    <string name="open_attachment">Ouvrir la pièce jointe</string>
    <string name="play_audio">Lire</string>
    <string name="pause_audio">Pause</string>
    <string name="audio_status_idle">Prêt à lire</string>
    <string name="audio_status_loading">Chargement…</string>
    <string name="audio_status_playing">Lecture en cours</string>
    <string name="audio_status_paused">Lecture en pause</string>
    <string name="audio_status_error">Lecture impossible</string>
    <string name="audio_playback_error">Impossible de lire ce fichier audio</string>
    <string name="no_preview_available_detail">Aucun aperçu disponible pour ce type de fichier</string>
    <string name="no_app_for_attachment">Aucune application disponible pour ouvrir cette pièce jointe</string>
    <string name="menu_email_settings">Paramètres e-mail</string>
    <string name="menu_settings">Réglages</string>
    <string name="settings_title">Réglages généraux</string>
    <string name="settings_security_title">Sécurité du compte</string>
    <string name="settings_security_description">Mettez à jour votre mot de passe principal pour protéger tous les contenus stockés.</string>
    <string name="settings_current_password">Mot de passe actuel</string>
    <string name="settings_new_password">Nouveau mot de passe</string>
    <string name="settings_confirm_password">Confirmez le nouveau mot de passe</string>
    <string name="settings_update_password">Mettre à jour le mot de passe</string>
    <string name="settings_password_required">Tous les champs mot de passe sont obligatoires.</string>
    <string name="settings_password_mismatch">Les nouveaux mots de passe ne correspondent pas.</string>
    <string name="settings_password_invalid_current">Le mot de passe actuel est incorrect.</string>
    <string name="settings_password_updated">Mot de passe mis à jour.</string>
    <string name="settings_placeholder_value">Non défini</string>
    <string name="settings_session_title">Session</string>
    <string name="settings_session_description">Se déconnecter immédiatement et revenir à l’écran d’authentification.</string>
    <string name="settings_logout">Se déconnecter</string>
    <string name="settings_data_title">Gestion des données locales</string>
    <string name="settings_data_description">Supprimez toutes les entrées et leurs références de pièces jointes enregistrées sur cet appareil.</string>
    <string name="settings_document_count">Documents stockés : %1$d</string>
    <string name="settings_delete_all">Supprimer tous les fichiers</string>
    <string name="settings_delete_all_title">Effacer les données de l’appareil</string>
    <string name="settings_delete_all_message">Voulez-vous vraiment supprimer %1$d document(s) et leurs métadonnées ? Cette action est irréversible.</string>
    <string name="settings_delete_all_success">Suppression effectuée : %1$d élément(s).</string>
    <string name="settings_email_title">Messagerie</string>
    <string name="settings_email_description">Configurez le serveur SMTP, le destinataire et l’utilisation de TLS pour l’envoi d’e-mails.</string>
    <string name="settings_email_button">Ouvrir la configuration e-mail</string>
    <string name="settings_email_test_button">Mail test</string>
    <string name="settings_email_configured">Serveur : %1$s
Destinataire : %2$s
Sécurité : %3$s</string>
    <string name="settings_email_missing">La configuration e-mail est incomplète. Fournissez l’hôte, le nom d’utilisateur et le destinataire.</string>
    <string name="settings_tls_enabled">TLS activé</string>
    <string name="settings_tls_disabled">TLS désactivé</string>
    <string name="settings_permissions_title">Autorisations de l’application</string>
    <string name="settings_permissions_description">Autorisez la réception des SMS/MMS pour l’automatisation et ouvrez les paramètres Android pour gérer les autres droits.</string>
    <string name="settings_permission_summary">Autorisations messages : %1$s</string>
    <string name="settings_permission_granted">accordée</string>
    <string name="settings_permission_missing">à valider</string>
    <string name="settings_request_permission">Demander à nouveau l’autorisation</string>
    <string name="settings_open_system">Ouvrir les paramètres Android</string>
    <string name="settings_permission_granted_toast">Autorisation accordée, les automatisations SMS sont actives.</string>
    <string name="settings_permission_denied_toast">Autorisation refusée, certaines fonctionnalités resteront limitées.</string>
    <string name="email_settings_title">Paramètres d’envoi d’e-mails</string>
    <string name="email_settings_description">Configurez le serveur SMTP utilisé pour transférer les SMS reçus par e-mail.</string>
    <string name="email_host_label">Hôte SMTP</string>
    <string name="email_port_label">Port</string>
    <string name="email_username_label">Nom d’utilisateur</string>
    <string name="email_password_label">Mot de passe / mot de passe d’application</string>
    <string name="email_recipient_label">Adresse e-mail de destination</string>
    <string name="email_tls_label">Utiliser TLS</string>
    <string name="save_email_settings">Enregistrer les paramètres</string>
    <string name="email_settings_required">Tous les champs sont obligatoires</string>
    <string name="invalid_port_number">Le port doit être un nombre valide</string>
    <string name="email_settings_saved">Paramètres enregistrés</string>
    <string name="email_test_subject">SMS - test configuration</string>
    <string name="email_test_body">Ce message de test confirme que la configuration SMTP de Coffre-Fort fonctionne. Aucun SMS n’est concerné.</string>
    <string name="email_test_started">E-mail de test en cours d’envoi…</string>
    <string name="email_test_missing_config">Complétez la configuration e-mail avant d’envoyer un test.</string>
    <string name="warning_incomplete_email_config">La configuration e-mail est incomplète. Vérifiez les paramètres.</string>
    <string name="ok">OK</string>
    <string name="sms_permission_denied">La réception des messages est désactivée : certains automatismes ne fonctionneront pas.</string>
    <string name="sms_document_title">SMS de %1$s</string>
    <string name="sms_document_title_unknown">expéditeur inconnu</string>
    <string name="message_document_title">Message de %1$s</string>
    <string name="sms_document_content">Expéditeur : %1$s
Date : %2$s

%3$s</string>
    <string name="message_document_content">Expéditeur : %1$s
Date : %2$s

%3$s</string>
    <string name="sms_email_body">Expéditeur : %1$s
Date : %2$s

%3$s</string>
    <string name="sms_email_empty_body_placeholder">(aucun contenu textuel fourni)</string>
    <string name="message_type_sms">SMS</string>
    <string name="message_type_mms">MMS</string>
    <string name="message_type_chat">Message</string>
    <string name="menu_messages">Messages SMS/MMS</string>
    <string name="messages_title">Sauvegarde SMS/MMS</string>
    <string name="messages_empty">Aucun SMS ou MMS à afficher pour le moment.</string>
    <string name="messages_sync_button">Synchroniser les messages</string>
    <string name="messages_email_button">Envoyer par e-mail</string>
    <string name="messages_email_none_selected">Sélectionnez au moins un message à envoyer.</string>
    <string name="messages_rcs_notice">Seuls les SMS et les MMS peuvent être copiés. Les messages de chat (RCS) ne peuvent pas être exportés en raison des restrictions d’Android.</string>
    <string name="message_detail_no_attachments">Aucune pièce jointe pour ce MMS.</string>
</resources>